# models/user.go
@@ -1,11 +1,9 @@
 package models
 
-import "time"
+import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type User struct {
-	ID        uint      `json:"id" example:"1"`
-	Name      string    `json:"name" example:"Josuel"`
-	Email     string    `json:"email" example:"josuel@example.com"`
-	CreatedAt time.Time `json:"created_at" example:"2025-04-23T12:00:00Z"`
-	UpdatedAt time.Time `json:"updated_at" example:"2025-04-23T12:00:00Z"`
+	ID    primitive.ObjectID `json:"id" bson:"_id,omitempty" example:"507f1f77bcf86cd799439011"`
+	Name  string             `json:"name" bson:"name" example:"Josuel"`
+	Email string             `json:"email" bson:"email" example:"josuel@example.com"`
 }
